## Process this file with automake to produce Makefile.in

## Created by Anjuta - will be overwritten
## If you don't want it to overwrite it,
## 	Please disable it in the Anjuta project configuration

INCLUDES =

AM_CXXFLAGS =\
	 -Wall\
	 -g

bin_PROGRAMS = buzzindexer

buzzindexer_SOURCES = \
	htmlparser.cpp\
	htmlparser.h\
	indexer.cpp\
	stdafx.cpp\
	stdafx.h\
	core.cpp\
	core.h\
	bzipper.cpp\
	bzipper.h\
	strops.cpp\
	strops.h

buzzindexer_LDFLAGS = \
	 -L/home/marius/develop/BUZZNET/z_lib/src

buzzindexer_LDADD = \
	 -lz_lib -lmysqlclient

