## Process this file with automake to produce Makefile.in

## Created by Anjuta - will be overwritten
## If you don't want it to overwrite it,
## 	Please disable it in the Anjuta project configuration

INCLUDES =

AM_CFLAGS =\
	 -Wall\
	 -g

AM_CXXFLAGS =\
	 -Wall\
	 -g

lib_LIBRARIES = libz_lib.a

libz_lib_a_SOURCES = \
	adler32.c\
	compress.c\
	crc32.c\
	crc32.h\
	deflate.c\
	deflate.h\
	gzio.c\
	infback.c\
	inffast.c\
	inffast.h\
	inffixed.h\
	inflate.c\
	inflate.h\
	inftrees.c\
	inftrees.h\
	trees.c\
	trees.h\
	uncompr.c\
	zconf.h\
	zconf.in.h\
	zlib.h\
	zutil.c\
	zutil.h



libz_lib_a_LIBADD = 

