## Process this file with automake to produce Makefile.in

## Created by Anjuta - will be overwritten
## If you don't want it to overwrite it,
## 	Please disable it in the Anjuta project configuration

INCLUDES =\
	 -I../include -I../../include

AM_CFLAGS =\
	 -Wall\
	 -g

lib_LIBRARIES = liblibcrypto.a

liblibcrypto_a_SOURCES = \
	a_bitstr.c\
	a_bmp.c\
	a_bool.c\
	a_bytes.c\
	a_d2i_fp.c\
	a_digest.c\
	a_dup.c\
	a_i2d_fp.c\
	a_int.c\
	a_meth.c\
	a_object.c\
	a_octet.c\
	a_print.c\
	a_set.c\
	a_sign.c\
	a_type.c\
	a_utctm.c\
	a_verify.c\
	asn1_err.c\
	asn1_lib.c\
	b_dump.c\
	b_print.c\
	bf_buff.c\
	bf_cfb64.c\
	bf_ecb.c\
	bf_enc.c\
	bf_locl.h\
	bf_nbio.c\
	bf_ofb64.c\
	bf_pi.h\
	bf_skey.c\
	bio_b64.c\
	bio_cb.c\
	bio_enc.c\
	bio_err.c\
	bio_lib.c\
	blowfish.h\
	bn_add.c\
	bn_asm.c\
	bn_blind.c\
	bn_div.c\
	bn_err.c\
	bn_exp.c\
	bn_exp2.c\
	bn_gcd.c\
	bn_lcl.h\
	bn_lib.c\
	bn_mont.c\
	bn_mul.c\
	bn_prime.c\
	bn_prime.h\
	bn_rand.c\
	bn_recp.c\
	bn_shift.c\
	bn_sqr.c\
	bn_sub.c\
	bn_word.c\
	bss_acpt.c\
	bss_conn.c\
	bss_fd.c\
	bss_file.c\
	bss_null.c\
	bss_sock.c\
	buf_err.c\
	buffer.c\
	by_dir.c\
	by_file.c\
	c_cfb64.c\
	c_ecb.c\
	c_enc.c\
	c_ofb64.c\
	c_skey.c\
	c_zlib.c\
	cast.h\
	cast_lcl.h\
	cast_s.h\
	cbc_enc.c\
	cfb64ede.c\
	cfb64enc.c\
	cfb_enc.c\
	comp_lib.c\
	conf.c\
	conf.h\
	conf_err.c\
	conf_lcl.h\
	cpt_err.c\
	cryptlib.c\
	cversion.c\
	d2i_dhp.c\
	d2i_dsap.c\
	d2i_pr.c\
	d2i_pu.c\
	d2i_r_pr.c\
	d2i_r_pu.c\
	d2i_s_pr.c\
	d2i_s_pu.c\
	des.h\
	des_enc.c\
	des_locl.h\
	des_ver.h\
	dh_check.c\
	dh_err.c\
	dh_gen.c\
	dh_key.c\
	dh_lib.c\
	digest.c\
	dsa_err.c\
	dsa_gen.c\
	dsa_key.c\
	dsa_lib.c\
	dsa_sign.c\
	dsa_vrf.c\
	e_cbc_3d.c\
	e_cbc_bf.c\
	e_cbc_c.c\
	e_cbc_d.c\
	e_cbc_i.c\
	e_cbc_r2.c\
	e_cbc_r5.c\
	e_cfb_bf.c\
	e_cfb_c.c\
	e_cfb_d.c\
	e_cfb_i.c\
	e_cfb_r2.c\
	e_cfb_r5.c\
	e_null.c\
	e_ofb_3d.c\
	e_ofb_bf.c\
	e_ofb_c.c\
	e_ofb_d.c\
	e_ofb_i.c\
	e_ofb_r2.c\
	e_ofb_r5.c\
	e_rc4.c\
	e_xcbc_d.c\
	ecb_enc.c\
	enc_read.c\
	enc_writ.c\
	encode.c\
	err.c\
	err_all.c\
	err_prn.c\
	evp_asn1.c\
	evp_enc.c\
	evp_err.c\
	evp_key.c\
	evp_lib.c\
	ex_data.c\
	f_string.c\
	fcrypt_b.c\
	hmac.c\
	i2d_dhp.c\
	i2d_dsap.c\
	i2d_pr.c\
	i2d_pu.c\
	i2d_r_pr.c\
	i2d_r_pu.c\
	i2d_s_pr.c\
	i2d_s_pu.c\
	i_cbc.c\
	i_cfb64.c\
	i_ecb.c\
	i_ofb64.c\
	i_skey.c\
	idea.h\
	idea_lcl.h\
	lh_stats.c\
	lhash.c\
	m_dss.c\
	m_dss1.c\
	m_md2.c\
	m_md5.c\
	m_mdc2.c\
	m_sha.c\
	m_sha1.c\
	main.c\
	md2_dgst.c\
	md5.h\
	md5_dgst.c\
	md5_locl.h\
	md5_one.c\
	md_rand.c\
	mdc2_one.c\
	mdc2dgst.c\
	mem.c\
	n_pkey.c\
	names.c\
	o_names.c\
	obj_dat.c\
	obj_dat.h\
	obj_err.c\
	obj_lib.c\
	objects.h\
	ofb64ede.c\
	ofb64enc.c\
	ofb_enc.c\
	p7_dgst.c\
	p7_enc.c\
	p7_enc_c.c\
	p7_evp.c\
	p7_i_s.c\
	p7_lib.c\
	p7_recip.c\
	p7_s_e.c\
	p7_signd.c\
	p7_signi.c\
	p_dec.c\
	p_enc.c\
	p_lib.c\
	p_seal.c\
	p_sign.c\
	p_verify.c\
	pcbc_enc.c\
	pem_all.c\
	pem_err.c\
	pem_info.c\
	pem_lib.c\
	pem_seal.c\
	pem_sign.c\
	pk7_doit.c\
	pkcs7err.c\
	podd.h\
	rand.h\
	rand_key.c\
	rand_lib.c\
	randfile.c\
	rc2.h\
	rc2_cbc.c\
	rc2_ecb.c\
	rc2_locl.h\
	rc2_skey.c\
	rc2cfb64.c\
	rc2ofb64.c\
	rc4_enc.c\
	rc4_locl.h\
	rc4_skey.c\
	rc5.h\
	rc5_ecb.c\
	rc5_enc.c\
	rc5_locl.h\
	rc5_skey.c\
	rc5cfb64.c\
	rc5ofb64.c\
	read2pwd.c\
	read_pwd.c\
	rmd_dgst.c\
	rmd_locl.h\
	rmd_one.c\
	rmdconst.h\
	rpc_des.h\
	rpc_enc.c\
	rsa_eay.c\
	rsa_err.c\
	rsa_gen.c\
	rsa_lib.c\
	rsa_none.c\
	rsa_pk1.c\
	rsa_saos.c\
	rsa_sign.c\
	rsa_ssl.c\
	set_key.c\
	sha.h\
	sha1_one.c\
	sha1dgst.c\
	sha_dgst.c\
	sha_locl.h\
	sha_one.c\
	sk.h\
	spr.h\
	stack.c\
	supp.c\
	t_pkey.c\
	t_x509.c\
	tmdiff.c\
	txt_db.c\
	v3_x509.c\
	x509_cmp.c\
	x509_d2.c\
	x509_def.c\
	x509_err.c\
	x509_ext.c\
	x509_lu.c\
	x509_obj.c\
	x509_r2x.c\
	x509_req.c\
	x509_txt.c\
	x509_v3.c\
	x509_vfy.c\
	x509pack.c\
	x509rset.c\
	x_algor.c\
	x_all.c\
	x_attrib.c\
	x_cinf.c\
	x_crl.c\
	x_exten.c\
	x_info.c\
	x_name.c\
	x_pkey.c\
	x_pubkey.c\
	x_req.c\
	x_sig.c\
	x_spki.c\
	x_val.c\
	x_x509.c\
	xcbc_enc.c



liblibcrypto_a_LIBADD = 

